<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/settingsLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:keepScreenOn="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0sp"
            android:layout_marginTop="20.0sp"
            android:text="@string/contact_us_msg"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#33ffffff" />

        <Button
            android:id="@+id/btnEmail"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10.0sp"
            android:layout_marginTop="10dp"
            android:onClick="btnClickHandler"
            android:text="@string/emailUs" >
        </Button>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0sp"
            android:layout_marginTop="30.0sp"
            android:text="@string/report_error_msg"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#33ffffff" />

        <Button
            android:id="@+id/btnEmailError"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10.0sp"
            android:layout_marginTop="10dp"
            android:onClick="btnClickHandler"
            android:text="@string/reportError" >
        </Button>

    </LinearLayout>

</ScrollView>